--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -15,7 +15,7 @@ ul {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 15px;
+  gap: 100px;
   padding: 0 2.5vw;
 }
 
@@ -69,9 +69,13 @@ ul {
 .game-contents {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   gap: 20px;
   padding: 10px 15px;
+}
+
+.game-card img {
+  margin-top: 15px;
 }
 
 .credits {
