Adjust image dimensions and scaling so that image resolution isn't lost when scaled

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -99,11 +99,12 @@ button:hover {
 
 .game-card:hover {
   background-color: lightgray;
-  transform: scale(1.01);
+  transform: scale(1.10);
 }
 
 .game-card img {
   margin-top: 15px;
+  width: 181px;
 }
 
 .credits {
