--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,6 +6,7 @@
   --dendro: #a5c83a;
   --cryo: #a0d5e7;
   --geo: #fab631;
+  --spread: 4px;
 }
 
 body {
@@ -192,37 +193,47 @@ button:hover {
 
 .pyro-card {
   border: solid 2px var(--pyro);
-  box-shadow: 0 0 4px var(--pyro);
+  box-shadow: 0 0 var(--spread) var(--pyro);
 }
 
 .hydro-card {
   border: solid 2px var(--hydro);
-  box-shadow: 0 0 4px var(--hydro);
+  box-shadow: 0 0 var(--spread) var(--hydro);
 }
 
 .anemo-card {
   border: solid 2px var(--anemo);
-  box-shadow: 0 0 4px var(--anemo);
+  box-shadow: 0 0 var(--spread) var(--anemo);
 }
 
 .electro-card {
   border: solid 2px var(--electro);
-  box-shadow: 0 0 4px var(--electro);
+  box-shadow: 0 0 var(--spread) var(--electro);
 }
 
 .dendro-card {
   border: solid 2px var(--dendro);
-  box-shadow: 0 0 4px var(--dendro);
+  box-shadow: 0 0 var(--spread) var(--dendro);
 }
 
 .cryo-card {
   border: solid 2px var(--cryo);
-  box-shadow: 0 0 4px var(--cryo);
+  box-shadow: 0 0 var(--spread) var(--cryo);
 }
 
 .geo-card {
   border: solid 2px var(--geo);
-  box-shadow: 0 0 4px var(--geo);
+  box-shadow: 0 0 var(--spread) var(--geo);
+}
+
+.pyro-card:hover,
+.hydro-card:hover,
+.anemo-card:hover,
+.electro-card:hover,
+.dendro-card:hover,
+.cryo-card:hover,
+.geo-card:hover {
+  --spread: 20px;
 }
 
 .scores-display .elemental-text::before {
