Add credits as a general styling

--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -37,3 +37,8 @@ button:hover {
   box-shadow: 0px 0px 20px 1px whitesmoke;
   background-color: rgba(245, 245, 245, 0.5);
 }
+
+.credits {
+  text-align: center;
+  margin: 0 0 2.5vh 0;
+}
