--- a/src/styles/_elementMenu.scss
+++ b/src/styles/_elementMenu.scss
@@ -24,32 +24,10 @@
     box-shadow: 1px 3px 6px 0px black;
     width: 100%;
 
-    .pyro-background {
-      background-color: $pyro;
-    }
-
-    .hydro-background {
-      background-color: $hydro;
-    }
-
-    .anemo-background {
-      background-color: $anemo;
-    }
-
-    .electro-background {
-      background-color: $electro;
-    }
-
-    .dendro-background {
-      background-color: $dendro;
-    }
-
-    .cryo-background {
-      background-color: $cryo;
-    }
-
-    .geo-background {
-      background-color: $geo;
+    @each $element-name, $element-variable in $elements {
+      .#{$element-name}-background {
+        background-color: $element-variable;
+      }
     }
   }
 
