--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -3,7 +3,9 @@
 
 @font-face {
   font-family: "Genshin Impact";
-  src: local("gi"), url("../assets/fonts/gi.ttf") format("truetype");
+  src: local("gi-webfont"),
+    url("../assets/fonts/gi-webfont.woff") format("woff"),
+    url("../assets/fonts/gi-webfont2.woff2") format("woff2");
 }
 
 :root {
